--- a/Desbravadores-site/public/styles/index.css
+++ b/Desbravadores-site/public/styles/index.css
@@ -1,5 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Cal+Sans&family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap');
 body{
-    margin: 0;  
+    margin: 0;
+    font-family: "Cal Sans", 'Arial';
 }
 
 /* Navbar */
@@ -9,13 +11,17 @@ body{
     justify-content: space-evenly;
     align-items: center;
     
-    width: 100vw;
+    top: 1.8vh;
+    left: 1.2vw;
+    width: 95vw;
     height: 13vh;
+    border-radius: 12px;
     background-color: rgb(245,245,255,50%);
     list-style-type: none;
+    position: absolute;
     
 }
-a {
+.nav-bar a {
     text-decoration: none;
     color: black;
     margin-right: 5vw;
@@ -26,9 +32,56 @@ a:hover{
     font-size: 20px;
 }
 .nav-bar img{
-    margin-right: 25vw;
+    margin-right: 30vw;
     width: 3vw;
 }
-.conteiner-inicial{
-    : url();
+.nav-bar .login a{
+    justify-content: center;
+}
+.nav-bar .login a:hover{
+    width: 1vw;
+    background-color: black;
+    color: aliceblue;
+    border-radius: 5px;
+    transition: 0.2s;
+}
+/* video de fundo */
+section{
+    width: 100%;
+    height: 100vh;
+    position: relative;
+    background-color: black;
+}
+section .conteiner-inicial{ /* conteiner do video */
+    width: 100%;
+    height: 100%;
+    position: absolute; /* definindo a sua posicao */
+}
+.conteiner-inicial video{
+    width: 100%;
+    height: 100%;
+    object-fit: cover; /* faz com que o video fique como se fosse um plano de fundo na pagina */
+    display: flex;
+    justify-content: center;
+    opacity: 40%;
+}
+.conteiner-conteudo p{
+    position: relative; /* faz com que esse conteudo fique na frente do video */
+    margin: 0;
+    display: flex;
+    top: 30vh; /* modifica o local do paragrafo de acordo com a sua posicao */
+
+    padding-left: 1vw;
+    font-size: 80px;
+    font-weight: bold;
+    
+    justify-self: flex-start;
+    height: 50%;
+    align-items: center;
+    color: aliceblue;
+    transition: 0.3s ease-in-out;  /* coloca uma transicao no paragrafo */
+}
+.conteiner-conteudo p:hover{
+    font-size: 90px;
+    color:brown /* troca a cor do texto para marrom */
 }
