--- a/Desbravadores-site/public/styles/cadastro.css
+++ b/Desbravadores-site/public/styles/cadastro.css
@@ -14,8 +14,8 @@ body{
     flex-direction: column;
     align-items: center;
 
-    width: 23%;
-    height: 48vh;
+    width: 26%;
+    height: 72vh;
     background-color: rgb(119, 119, 119, 0.3);
     border-radius: 10px;
 }
@@ -39,7 +39,7 @@ input {
     border-radius: 6px;
     border: 0;
 }
-.cadastro{
+.login{
     display: flex;
     align-items: center;
 }
