--- a/Desbravadores-site/public/styles/cadastro.css
+++ b/Desbravadores-site/public/styles/cadastro.css
@@ -15,7 +15,7 @@ body{
     align-items: center;
 
     width: 26%;
-    height: 72vh;
+    height: 90vh;
     background-color: rgb(119, 119, 119, 0.3);
     border-radius: 10px;
 }
@@ -42,4 +42,8 @@ input {
 .login{
     display: flex;
     align-items: center;
+}
+a{
+    text-decoration: none;
+    color: rgb(59, 59, 155);
 }
