--- a/Desbravadores-site/public/styles/cadastro.css
+++ b/Desbravadores-site/public/styles/cadastro.css
@@ -4,7 +4,7 @@ body{
     font-family: "Cal Sans", 'Arial';
 }
 .conteiner {
-    background-image: url("");
+    background-image: url("../assets/imgs/img-fundo-cadastro-login.png");
 }
 .box {
     display: flex;
@@ -19,7 +19,7 @@ body{
 
     width: 26%;
     height: 90vh;
-    background-color: rgb(119, 119, 119, 0.3);
+    background-color: rgb(119, 119, 119, 0.8);
     border-radius: 10px;
 }
 .box .campos h1{
