--- a/Desbravadores-site/public/styles/cadastro.css
+++ b/Desbravadores-site/public/styles/cadastro.css
@@ -4,7 +4,7 @@ body{
     font-family: "Cal Sans", 'Arial';
 }
 .conteiner {
-    background-image: url("../assets/imgs/img-fundo-cadastro-login.png");
+    background-image: url("");
 }
 .box {
     display: flex;
@@ -19,7 +19,7 @@ body{
 
     width: 26%;
     height: 90vh;
-    background-color: rgb(119, 119, 119, 0.8);
+    background-color: rgb(119, 119, 119, 0.3);
     border-radius: 10px;
 }
 .box .campos h1{
@@ -42,11 +42,43 @@ input {
     border-radius: 6px;
     border: 0;
 }
-.login{
+.campos .login{
     display: flex;
     align-items: center;
 }
 a{
     text-decoration: none;
     color: rgb(59, 59, 155);
+}
+
+/* ERRO */
+.alerta_erro{
+  display: flex;
+  justify-content: flex-end;
+}
+
+.card_erro {
+  display: none;
+  background-color: #fff;
+  color: black;
+  width: 230px;
+  position: fixed;
+  border-radius: 4px;
+  border: #ED145B 3px solid;
+  padding: 10px;
+  margin-right: 10%;
+}
+
+.card_erro #mensagem_erro{
+  font-weight: 500;
+  font-size: 20px;
+}
+.loading-div {
+  width: 50px;
+  display: none;
+}
+
+.loading-div img {
+  height: 50px;
+  width: 50px;
 }
