--- a/Desbravadores-site/public/styles/dashboard.css
+++ b/Desbravadores-site/public/styles/dashboard.css
@@ -100,7 +100,7 @@ a{
     height: 20vh;
     margin-top: 10vh;
     margin-left: 10vw;
-    cursor: pointer;
+    cursor: not-allowed;
 }
 
 
@@ -111,7 +111,7 @@ a{
     height: 20vh;
     margin-top: 10vh;
     margin-left: 10vw;
-    cursor: pointer;
+    cursor: not-allowed;
 }
 
 .Pesquisador {
@@ -121,7 +121,7 @@ a{
     height: 20vh;
     margin-top: 10vh;
     margin-left: 10vw;
-    cursor: pointer;
+    cursor: not-allowed;
 }
 
 .Pioneiro {
@@ -131,7 +131,7 @@ a{
     height: 20vh;
     margin-top: 10vh;
     margin-left: 10vw;
-    cursor: pointer;
+    cursor: not-allowed;
 }
 
 .Excursionista {
@@ -141,7 +141,7 @@ a{
     height: 20vh;
     margin-top: 10vh;
     margin-left: 10vw;
-    cursor: pointer;
+    cursor: not-allowed;
 }
 
 .Guia {
@@ -151,5 +151,5 @@ a{
     height: 20vh;
     margin-top: 10vh;
     margin-left: 10vw;
-    cursor: pointer;
+    cursor: not-allowed;
 }
