--- a/Desbravadores-site/public/styles/quiz.css
+++ b/Desbravadores-site/public/styles/quiz.css
@@ -22,6 +22,7 @@ body{
     list-style-type: none;
     border-bottom-right-radius: 20px;
     border-top-right-radius: 20px;
+    position: fixed;
 }
 a{
     text-decoration: none;
@@ -175,8 +176,8 @@ button {
     color: var(--new-gray);
 }
 .conteiner-quiz {
-    position: relative;
-    top: 10vh;
+    position: hidden;
+    margin-top: 5vh;
     width: 100%;
     height: 100%;
     
@@ -185,12 +186,13 @@ button {
 }
 #questoes {
     width: 60vw;
-    height: 242vh;
+    height: max-content;
     background-color: #FDD500;
     border-radius: 20px;
     opacity: 0%;
     transition: 0.5s ease-in-out;
     margin-left: 10vw;
+
 }
 .conteiner-box {
     position: hidden;
