cada classe agora pode ser feita de acordo com a idade do usuario

--- a/Desbravadores-site/public/styles/login.css
+++ b/Desbravadores-site/public/styles/login.css
@@ -19,7 +19,7 @@ body{
 
     width: 23%;
     height: 48vh;
-    background-color: rgb(119, 119, 119, 0.3);
+    background-color: rgba(251, 255, 0, 0.8);
     border-radius: 10px;
 }
 .box .campos h1{
