--- a/Desbravadores-site/public/styles/cadastro.css
+++ b/Desbravadores-site/public/styles/cadastro.css
@@ -3,8 +3,8 @@ body{
     margin: 0;
     font-family: "Cal Sans", 'Arial';
 }
-.conteiner {
-    background-image: url("../assets/imgs/img-fundo-cadastro-login.png");
+.container {
+    background-image: url("../assets/imgs/img-fundo-cadastro-cadastro.png");
 }
 .box {
     display: flex;
@@ -19,7 +19,7 @@ body{
 
     width: 26%;
     height: 90vh;
-    background-color: rgb(119, 119, 119, 0.3);
+    background-color: rgba(251, 255, 0, 0.8);
     border-radius: 10px;
 }
 .box .campos h1{
