--- a/Desbravadores-site/public/styles/quiz.css
+++ b/Desbravadores-site/public/styles/quiz.css
@@ -74,6 +74,21 @@ a{
     position: relative;
     top: 1.3vh;
 }
+.box3 {
+    display: flex;
+    justify-content: center;
+    align-self: center;
+    height: 5vh;
+    width: 10vw;
+    background-color: #FDD500;
+    border-radius: 40px;
+
+    
+}
+.box3 a{
+    position: relative;
+    top: 1.3vh;
+}
 :root {
     --primary-brand-color: #ED145B;
     --secondary-brand-color: #0762C8;
