--- a/Desbravadores-site/public/styles/dashgeral.css
+++ b/Desbravadores-site/public/styles/dashgeral.css
@@ -1,12 +1,141 @@
+@import url('https://fonts.googleapis.com/css2?family=Cal+Sans&family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap');
 body{
-    background-color: #0A3880;
+    background-color: hsl(217, 84%, 17%);
+    margin: 0;
+    font-family: "Cal Sans", 'Arial';
+
 }
 .conteiner {
     display: flex;
-    justify-content: center;
+}
+/* DASH */
+.conteiner-graph {
+    display: flex;
+    transform: translateX(10vw);
 }
 .dash {
+    height: 30vw;
     width: 30vw;
-    background-color: black;
+    background-color: #0A3880;
     border-radius: 20px;
+    transform: translateX(10vw) translateY(10vh);
+    position: hidden;
 }
+.dash2 {
+    height: 30vw;
+    width: 30vw;
+    background-color: #0A3880;
+    border-radius: 20px;
+    transform: translateX(15vw) translateY(10vh);
+}
+.dado-graph {
+    height: 6vw;
+    width: 30vw;
+    background-color: #0A3880;
+    border-radius: 20px;
+    transform: translateY(1vh);
+}
+.dado-graph2 {
+    height: 6vw;
+    width: 30vw;
+    background-color: #0A3880;
+    border-radius: 20px;
+    transform: translateX(-15vw) translateY(71.3vh);
+}
+/* NAVBAR */
+.nav-bar{
+    margin: 0;
+    height: 100vh;
+    width: 15vw;
+    background-color: #0A3880;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    justify-content: space-evenly;
+    align-items: center;
+    list-style-type: none;
+    border-bottom-right-radius: 20px;
+    border-top-right-radius: 20px;
+    position: fixed;
+}
+a{
+    text-decoration: none;
+    color: rgb(7, 7, 7);
+    margin-bottom: 20vh
+}
+.box {
+    display: flex;
+    justify-content: center;
+    align-self: center;
+    height: 5vh;
+    width: 10vw;
+    background-color: #FDD500;
+    border-radius: 40px;
+
+    
+}
+.box a{
+    position: relative;
+    top: 1.3vh;
+}
+.box1 {
+    display: flex;
+    justify-content: center;
+    align-self: center;
+    height: 5vh;
+    width: 10vw;
+    background-color: #FDD500;
+    border-radius: 40px;
+
+    
+}
+.box1 a{
+    position: relative;
+    top: 1.3vh;
+}
+.box2 {
+    display: flex;
+    justify-content: center;
+    align-self: center;
+    height: 5vh;
+    width: 10vw;
+    background-color: #FDD500;
+    border-radius: 40px;
+
+    
+}
+.box2 a{
+    position: relative;
+    top: 1.3vh;
+}
+.box3 {
+    display: flex;
+    justify-content: center;
+    align-self: center;
+    height: 5vh;
+    width: 10vw;
+    background-color: #FDD500;
+    border-radius: 40px;
+
+    
+}
+.box3 a{
+    position: relative;
+    top: 1.3vh;
+}
+.box4 {
+    display: flex;
+    justify-content: center;
+    align-self: center;
+    height: 5vh;
+    width: 10vw;
+    background-color: #FDD500;
+    border-radius: 40px;
+
+    
+}
+.box4 a{
+    position: relative;
+    top: 1.3vh;
+}
+
