--- a/Desbravadores-site/public/styles/conta.css
+++ b/Desbravadores-site/public/styles/conta.css
@@ -106,9 +106,9 @@ a{
 }
 /* DASH */
 .dash {
-    width: 100%;
     display: flex;
     justify-content: center;
+    padding-left: 10vw;
 }
 #GraphQuestionario {
     width: 30vw;
@@ -138,9 +138,10 @@ a{
     margin-top: 100px;
     display: flex;
     align-items: center;
-    width: 100%;
-    color: aliceblue;
+    width: 80%;
+    color: #FDD500;
     flex-direction: column;
+    padding-left: 11vw;
 }
 .nomeUsuario{
     transition: 0.3s ease-in-out;
@@ -156,4 +157,95 @@ a{
 }
 #GraphQuestionario:hover {
     padding: 20px;
+}
+.kpiQuiz {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    justify-content: space-evenly;
+    transform: translateX(50px);
+}
+
+#kpi_quizcerta{
+    display: flex;
+    color: green;
+    background-color: #0A3880;
+    width: 8vw;
+    height: 10vh;
+    border-radius: 10px;
+    text-align: center;
+    font-size: 40px;
+    justify-content: center;
+    align-items: center;
+    transition: 0.3s ease-in-out;
+}
+#kpi_quizerrada{
+    display: flex;
+    color: red;
+    background-color: #0A3880;
+    width: 8vw;
+    height: 10vh;
+    border-radius: 10px;
+    text-align: center;
+    font-size: 40px;
+    align-items: center;
+    justify-content: center;
+}
+.certas {
+    display: flex;
+    align-items: center;
+}
+.conteiner {
+    display: flex;
+}
+/* DASH */
+.conteiner-graph {
+    display: flex;
+    transform: translateX(10vw);
+    width: 80%;
+}
+.dash2 {
+    height: 30vw;
+    width: 30vw;
+    background-color: #0A3880;
+    border-radius: 20px;
+    transform: translateX(10vw) translateY(10vh);
+    position: hidden;
+}
+.dash2 p{
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    color: #FDD500;
+}
+.dash3 {
+    height: 30vw;
+    width: 30vw;
+    background-color: #0A3880;
+    border-radius: 20px;
+    transform: translateX(15vw) translateY(10vh);
+}
+.dado-graph {
+    display: flex;
+    flex-direction: column;
+    height: 6vw;
+    width: 30vw;
+    background-color: #0A3880;
+    border-radius: 20px;
+    transform: translateY(1vh);
+    align-items: center;
+    justify-content: center;
+    color: #FDD500;
+    font-size: 30px;
+    transition: 0.2s ease-in-out;
+}
+p {
+    margin: 0;
+    font-size: 16px;
+}
+span {
+    transition: 0.2s ease-in-out;
+}
+.dado-graph:hover span{
+    font-size: 40px;
 }
