--- a/Desbravadores-site/public/styles/quiz.css
+++ b/Desbravadores-site/public/styles/quiz.css
@@ -89,20 +89,10 @@ a{
     position: relative;
     top: 1.3vh;
 }
-.box4 {
-    display: flex;
-    justify-content: center;
-    align-self: center;
-    height: 5vh;
-    width: 10vw;
-    background-color: #FDD500;
-    border-radius: 40px;
-
-    
-}
-.box4 a{
-    position: relative;
-    top: 1.3vh;
+#botoes button {
+    background-color: #0A3880;
+    color: #FDD500;
+    margin-left: 15px;
 }
 :root {
     --primary-brand-color: #ED145B;
