--- a/Desbravadores-site/public/styles/login.css
+++ b/Desbravadores-site/public/styles/login.css
@@ -65,6 +65,9 @@ a {
   border: #ED145B 3px solid;
   padding: 10px;
   margin-right: 10%;
+  border-radius: 20px;
+  transform: translateX(-10vw) translateY(4.5vh);
+  background-color: #FDD500;
 }
 
 .card_erro #mensagem_erro{
